--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,12 @@ body {
   text-align: center;
   font-family: 'Lato', sans-serif;
 }
+img {
+  height: 220px;
+  padding-bottom: 30px;
+  width: 100%;
+}
 .ticButton .btn {
   height: 100px;
+  margin-top: -23px;
 }
