--- a/css/styles.css
+++ b/css/styles.css
@@ -13,3 +13,10 @@ img {
   font-size: 50px;
   padding-top: 25px;
 }
+.card-panel {
+  height: 2em;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 7px !important;
+  height: auto;
+}
