add better styling to img and make it responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,10 @@ body {
   font-family: 'Lato', sans-serif;
 }
 img {
-  height: 220px;
+  margin-bottom: 30px;
   padding-bottom: 30px;
   width: 100%;
+  max-width: 800px;
 }
 .ticButton .btn {
   height: 100px;
@@ -19,4 +20,5 @@ img {
   font-size: 20px;
   padding-top: 7px !important;
   height: auto;
+  width: auto;
 }
