--- a/css/styles.css
+++ b/css/styles.css
@@ -26,3 +26,12 @@ img {
 .status{
   margin: 20px;
 }
+#dropdown {
+
+}
+.space {
+  margin-left: 24.8% !important;
+}
+.left {
+  margin-left: 17% !important;
+}
